--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="auth-container">
                 <div class="auth-card">
                     <div class="logo-section">
-                        <img src="Study TermTruck LOGO.png" alt="Study TermTrack Logo" class="logo">
+                        <img src="Study TermTruck LOGO.png" alt="Study TermTrack LOGO" class="logo">
                         <h1>Study TermTrack</h1>
                         <p class="subtitle">Caraga State University</p>
                     </div>
