--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="dashboard-container">
                 <header class="dashboard-header">
                     <div class="header-content">
-                        <img src="public/images/study-termtrack-logo.png" alt="Study TermTrack Logo" class="header-logo">
+                        <img src="Study TermTruck LOGO.png" alt="Study TermTrack Logo" class="header-logo">
                         <h1>Study TermTrack Dashboard</h1>
                         <button id="logout-btn" class="logout-btn">Logout</button>
                     </div>
